<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/log"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="Registration Form"
                android:textColor="@color/white_greyish"
                android:textSize="25sp"
                android:textStyle="bold" />

                <EditText
                    android:id="@+id/fullName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/fullName"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />


            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

                <EditText
                    android:id="@+id/userEmailId"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="55dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@drawable/borderbtn"
                    android:gravity="center"
                    android:spinnerMode="dropdown"  />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

                <EditText
                    android:id="@+id/mobileNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/mobileNumber"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="Date Of Birth"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/passowrd"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/terms_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="#000000"
                    android:background="#000000"
                    android:layout_marginTop="3dp" />
                <TextView
                    android:id="@+id/agreeGuestTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Read term's and Condition before click checkbox."
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
            </LinearLayout>


            <Button
                android:id="@+id/submitBtn1"
                android:layout_margin="5dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:padding="15dp"
                android:textSize="24sp"
                android:text="REGISTER"
                android:textColor="#ffffff"
                android:backgroundTint="#2235A1"
                android:layout_gravity="center"/>


            <TextView
                android:id="@+id/already_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:background="#7F000000"
                android:padding="5dp"
                android:text="Already have Account? Login here."
                android:textColor="#ffff"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
